# StepikChurnPrediction

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  train_pipeline.py
configs/: train_config.example.yaml
src/: data_processing.py  inference_model.py  mlflow_job.py  model_fit_predict.py  train_pipeline_params.py
