[tool.poetry]
name = "stepikchurnprediction"
version = "0.1.0"
description = ""
authors = ["Nikita Tenishev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
jupyter = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
seaborn = "^0.12.2"
pandasql = "^0.7.3"
ruff = "^0.0.291"
pytest = "^7.4.2"
catboost = "^1.2.2"
mlflow = "^2.7.1"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.1"
streamlit = "^1.27.2"
marshmallow-dataclass = "^8.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
select = ["F", "E", "W", "I", "N", "D", "ANN"]
ignore = ["D100", "ANN101", "D107"]